New é Gay, sistema de comandos
Co-authored-by: Rodrigo Couto <rodrigo.couto.santos@hotmail.com>

--- a/Saphi.html
+++ b/Saphi.html
@@ -15,8 +15,8 @@
             <a href="Saphi.html" class="logo">S<span>ap</span>hi<span>re</span>-chan</a>
             <ul class="nav menu">
                 <li class="nav-item"><a href="Saphi.html">HOME</a></li>
-                <li class="nav-item"><a href="https://animesup.biz">DASHBOARD</a></li>
-                <li class="nav-item"><a href="https://www.instagram.com/rodycouto/">COMANDOS</a></li>
+                <li class="nav-item"><a href="Dashboard.html">DASHBOARD</a></li>
+                <li class="nav-item"><a href="Comandos.html">COMANDOS</a></li>
                 <i class='bx bx-search'></i>
                 <div class="login">
                     <a href="#" class="login">LOGIN</a>
@@ -32,8 +32,8 @@
     <main>
         <section class="home">
             <div class="home-text">
-                <h1 class="text-h1">O </h1>
-                <h1 class="text-h1">EQUILIBRIO DE UMA LUA</h1>
+                
+                <marquee><h1 class="text-h1"> O EQUILIBRIO DE UMA LUA</h1></marquee>
             </div>
                 <div class="home-img">
                     <img src="img/Saphi.png" alt="Saphire">
